# insurance-openev

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: __init__.py  baseline.py  llm_client.py
environment/: env.py  models.py  scenarios.py
graders/: grader.py
server/: app.py
tasks/: easy_task.py  hard_task.py  medium_task.py
